--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="{% static 'main.css' %}" rel="stylesheet">
 </head>
 <body>
     {% block content %}
