--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,7 @@
+body{
+    width: 95%;
+    margin: 2.5%;
+}
 h1 {
     font-family: fantasy;
     color: darkblue;
@@ -18,20 +22,46 @@ div {
     color: darkblue;
     text-align: justify;
     font-size: 20px;
-    padding: 15px;
+    width: 95%;
+    padding: 2.5%;
+}
+#comments {
+    width: 90%;
+    padding: 5%;
+    background-color: powderblue;
+    margin: 30px 0;
+}
+.comment {
+    width: 95%;
+    padding: 2.5%;
+    display: flex;
+}
+.comment .name {
+    width: 18%;
+    padding: 1%;
+    font-size: 18px;
+}
+.comment .text {
+    width: 78%;
+    padding: 1%;
+    font-size: 16px;
 }
 .header {
     font-size: 30px;
     text-align: center;
-    color: darkgreen;
 }
 form {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: darkgreen;
     border: 2px solid darkgreen;
     font-size: 16px;
-    padding: 25px;
+    width: 95%;
+    padding: 2.5%;
     text-align: center;
+    margin: 0;
+}
+form div {
+    color: darkgreen;
 }
 input[type="text"], input[type="email"], textarea {
     font-family: Arial, Helvetica, sans-serif;
@@ -40,6 +70,8 @@ input[type="text"], input[type="email"], textarea {
     font-size: 16px;
     padding: 5px;
     width: 250px;
+    text-align: center;
+    margin: 0 0 20px;
 }
 textarea[name="comment"] {
     width: 90%;
