--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,9 +3,18 @@
 {% block content %}
 <h1>-WATER-</h1>
 <div>Water is the basis of all life. It flows as blood in our veins. It makes up 76% of our cells. We breathe it in the air. We drink it daily. Without water, all life on this planet would cease.</div>
-<div id="comments"></div>
-<form action="{% url "add_comment" %}" method="POST">
-    <div class="header">COMMENT</div>
+<div id="comments">
+  <div class="header">COMMENTS</div>
+  {% for comment in comments %}
+    <div class="comment">
+      <div class="name">{{comment.name}}</div>
+      <div class="text">{{comment.comment}}</div>
+    </div>
+  {% endfor %}
+</div>
+<form action="{% url "index" %}" method="POST">
+  {% csrf_token %}
+  <div class="header">ADD COMMENT</div>
   Name:<br>
   <input type="text" name="name" autocomplete="off"><br>
   Comment:<br>
