--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -60,6 +60,9 @@ form {
     text-align: center;
     margin: 0;
 }
+form label {
+    padding-right: 10px;
+}
 form div {
     color: darkgreen;
 }
