--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,15 @@ body{
     width: 95%;
     margin: 2.5%;
 }
+ul {
+    margin: 0;
+    padding: 0;
+}
+li {
+    list-style: none;
+    color: red;
+    font-weight: bold;
+}
 h1 {
     font-family: fantasy;
     color: darkblue;
@@ -77,7 +86,7 @@ input[type="text"], input[type="email"], textarea {
     margin: 0 0 20px;
 }
 textarea[name="comment"] {
-    width: 90%;
+    width: 80%;
     height: 4em;
     overflow-wrap: break-word;
     word-wrap: break-word;
