--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,14 @@
 
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
+<ul>
+  {% for elist in errors %}
+    {% for e in elist %}
+      <li>{{e}}</li>
+    {% endfor %}
+  {% endfor %}
+</ul>
 <h1>-WATER-</h1>
 <div>Water is the basis of all life. It flows as blood in our veins. It makes up 76% of our cells. We breathe it in the air. We drink it daily. Without water, all life on this planet would cease.</div>
 <div id="comments">
@@ -12,7 +20,7 @@
     </div>
   {% endfor %}
 </div>
-<form action="{% url "index" %}" method="POST">
+<form action="{% url "add_comment" %}" method="POST">
   {% csrf_token %}
   {{form}}
   {% comment %}  <div class="header">ADD COMMENT</div>
@@ -23,3 +31,7 @@
   <input type="submit" value="Submit">
 </form>
 {% endblock content %}
+
+{% block scripts %}
+  <script src="{% static 'js/style-form.js' %}"></script>
+{% endblock %}
