added posts to database

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,8 +9,8 @@
     {% endfor %}
   {% endfor %}
 </ul>
-<h1>-WATER-</h1>
-<div>Water is the basis of all life. It flows as blood in our veins. It makes up 76% of our cells. We breathe it in the air. We drink it daily. Without water, all life on this planet would cease.</div>
+<h1>-{{post.title}}-</h1>
+<div>{{post.post}}</div>
 <div id="comments">
   <div class="header">COMMENTS</div>
   {% for comment in comments %}
