--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,36 +2,11 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
-<ul>
-  {% for elist in errors %}
-    {% for e in elist %}
-      <li>{{e}}</li>
-    {% endfor %}
-  {% endfor %}
-</ul>
-<h1>-{{post.title}}-</h1>
-<div>{{post.post}}</div>
-<div id="comments">
-  <div class="header">COMMENTS</div>
-  {% for comment in comments %}
-    <div class="comment">
-      <div class="name">{{comment.name}}</div>
-      <div class="text">{{comment.comment}}</div>
-    </div>
-  {% endfor %}
+<h1>HOME</h1>
+<div id="links">
+{% for post in posts %}
+  <a class="blog-link" href="{% url 'posts' post.id %}">Blog {{post.id}} -- {{post.title}} -- created by {{post.author}}</a><br/>
+{% endfor %}
 </div>
-<form action="{% url "add_comment" %}" method="POST">
-  {% csrf_token %}
-  {{form}}
-  {% comment %}  <div class="header">ADD COMMENT</div>
-  Name:<br>
-  <input type="text" name="name" autocomplete="off"><br>
-  Comment:<br>
-  <textarea name="comment" autocomplete="off"></textarea><br><br> {% endcomment %}
-  <input type="submit" value="Submit">
-</form>
-{% endblock content %}
 
-{% block scripts %}
-  <script src="{% static 'js/style-form.js' %}"></script>
-{% endblock %}
+{% endblock content %}
